# Foxhole

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Chat-convo.md  Dockerfile  FoxHole reseach.md  README.md  fix_tests.py  fix_tests2.py  idea.md  implementation-plan.md  pyproject.toml  simplify_architecture_plan.md  update-plan.md
.github/workflows/: ci.yml  release.yml
agent/: __init__.py  auth.py  event_bus.py  events.py  main.py  mock_mode.py  orchestrator.py  safety.py  scheduler.py  settings.py
agent/alerts/: dispatcher.py  telegram.py
agent/db/: __init__.py  models.py  repositories.py  session.py
agent/llm/: __init__.py  client.py  router_config.yaml
agent/tools/: __init__.py  argument_parsing.py  base.py  registry.py
docs/: architecture.md  release.md
docs/deployment/: debian-ubuntu.md  docker-compose.md  proxmox-lxc.md  proxmox-permissions.md
docs/integrations/: backups.md  caddy.md  docker.md  homepage-homarr.md  plex.md  portainer.md  proxmox.md  sonarr-radarr.md  tautulli-overseerr.md
docs/runbooks/: arr-import-failures.md  container-crash-loop.md  network-security.md  plex-buffering.md  storage-and-backups.md
iac/ansible/: inventory.yml  playbook.yml
iac/compose/: .env.example  (+3 more)
tests/: conftest.py  test_imports.py
tools/: __init__.py  arr_tool.py  backup_tool.py  caddy_tool.py  docker_tool.py  network_tool.py  observability_tool.py  plex_tool.py  portainer_tool.py  proxmox_tool.py  security_tool.py  uptime_kuma_tool.py
ui/: README.md  package.json
workers/: __init__.py  celery_app.py  remediation.py  tasks.py
(+74 files in other folders)
